--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,10 @@
 				<h1>Home</h1>
 				<div class="slider">
 					<ul>
-						<li><img src="images/narutofix2.jpg" alt="image" width="800" height="350"></li>
-						<li><img src="images/rasenganfix2.jpg" alt="image" width="800" height="350"></li>
-						<li><img src="images/temarifix2.jpg" alt="image" width="800" height="350"></li>
-						<li><img src="images/minatofix2.jpg" alt="image" width="800" height="350"></li>
+						<li><img src="images/narutofix2.jpg" alt="image"></li>
+						<li><img src="images/rasenganfix2.jpg" alt="image"></li>
+						<li><img src="images/temarifix2.jpg" alt="image"></li>
+						<li><img src="images/minatofix2.jpg" alt="image"></li>
 		
 					</ul>
 				</div>
